@@ -1,10 +1,0 @@
-<?php
-
-// autoload_psr4.php @generated by Composer
-
-$vendorDir = dirname(dirname(__FILE__));
-$baseDir = dirname($vendorDir);
-
-return array(
-    'Pelago\\' => array($vendorDir . '/pelago/emogrifier/Classes'),
-);
